# unitas

./: .gitignore  README.md  SECURITY.md  pyproject.toml  test_unitas.py  unitas.py  view.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: pylint.yml  release.yml
tests/: test_unitas.py
tests/nessus_files/: nessus-error-1.nessus
tests/nmap_files/: nmap-error-1.xml
unitas/: __init__.py  convert.py  exporter.py  merger.py  model.py  parser.py  unitas.py  utils.py
unitas/resources/static/js/: auto-loader.js  filters.js
